# my-project

./: LICENSE
backend/: .env.example  .gitignore  Makefile  main.py  pyproject.toml  update.py
backend/app/: router.py
backend/app/admin/: conf.py
backend/app/admin/api/: router.py
backend/app/admin/crud/: crud_api.py  crud_casbin.py  crud_dept.py  crud_login_log.py  crud_menu.py  crud_role.py  crud_user.py
backend/app/admin/model/: sys_api.py  sys_casbin_rule.py  sys_dept.py  sys_login_log.py  sys_menu.py  sys_role.py  sys_role_menu.py  sys_user.py  sys_user_role.py
backend/app/admin/schema/: api.py  captcha.py  casbin_rule.py  dept.py  login_log.py  menu.py  role.py  token.py  user.py
backend/app/admin/service/: auth_service.py  casbin_service.py  dept_service.py  (+4 more)
backend/celery_worker/: worker.py
backend/common/: dataclasses.py  enums.py  logger.py  model.py  pagination.py  schema.py
backend/common/exception/: errors.py  errors_schema.py  exception_handler.py
backend/common/response/: response_b24.py  response_code.py  response_one_c.py  response_schema.py
backend/common/security/: header.py  jwt.py  permission.py  rbac.py
backend/core/: config.py  path_conf.py  registrar.py
backend/database/: db_postgres.py  db_redis.py
backend/docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
backend/middleware/: access_middleware.py  jwt_auth_middleware.py  state_middleware.py
backend/migrations/: env.py
backend/utils/: build_tree.py  demo_site.py  health_check.py  openapi.py  request_parse.py  serializers.py  timezone.py  trace_id.py
(+62 files in other folders)
