[tool.poetry]
name = "pattern"
version = "0.1.0"
description = ""
authors = ["LonelyAvon <92423766+LonelyAvon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
yarl = "^1.9.4"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pydantic-extra-types = "^2.9.0"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
sqlalchemy-utils = "^0.41.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.3"
datetime = "^5.5"
python-multipart = "^0.0.9"
aiohttp = "^3.10.9"
loguru = "^0.7.2"
user-agents = "^2.2.0"
xdbsearchip = "^1.0.2"
asgiref = "^3.8.1"
msgspec = "^0.18.6"
asgi-correlation-id = "^4.3.3"
fastapi-limiter = "^0.1.6"
bs4 = "^0.0.2"
lxml = "^5.3.0"
phonenumbers = "^8.13.47"
passlib = "^1.7.4"
python-jose = "^3.3.0"
greenlet = "^3.1.1"
sqlalchemy-crud-plus = "^1.4.0"
fast-captcha = "^0.3.2"
requests = "^2.32.3"
casbin = "^1.36.3"
casbin-async-sqlalchemy-adapter = "^1.5.0"
fastapi-pagination = "^0.12.31"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
